# rusty-journal

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  tasks.rs
