[package]
edition = "2021"
name = "rusty-journal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4.19", features = ["serde"]}
home = "0.5"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
structopt = "0.3.26"
